test/e2e_env/universal/envoyconfig/testdata/sidecars/meshtimeout/no-policies.demo-client.golden.json
{
  "diff": [],
  "xds": {
    "type.googleapis.com/envoy.config.cluster.v3.Cluster": {
      "envoyconfig_demo-client__kuma-3_msvc_3000": {
        "connectTimeout": "5s",
        "edsClusterConfig": {
          "edsConfig": {
            "ads": {},
            "resourceApiVersion": "V3"
          }
        },
        "name": "envoyconfig_demo-client__kuma-3_msvc_3000",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "alpnProtocols": [
                "kuma"
              ],
              "combinedValidationContext": {
                "defaultValidationContext": {
                  "matchTypedSubjectAltNames": [
                    {
                      "matcher": {
                        "exact": "spiffe://envoyconfig/demo-client"
                      },
                      "sanType": "URI"
                    }
                  ]
                },
                "validationContextSdsSecretConfig": {
                  "name": "mesh_ca:secret:envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              },
              "tlsCertificateSdsSecretConfigs": [
                {
                  "name": "identity_cert:secret:envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              ]
            },
            "sni": "a65abe81bca1750d1.demo-client.3000.envoyconfig.ms"
          }
        },
        "type": "EDS",
        "typedExtensionProtocolOptions": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "explicitHttpConfig": {
              "http2ProtocolOptions": {}
            }
          }
        }
      },
      "envoyconfig_test-server__kuma-3_msvc_80": {
        "connectTimeout": "5s",
        "edsClusterConfig": {
          "edsConfig": {
            "ads": {},
            "resourceApiVersion": "V3"
          }
        },
        "name": "envoyconfig_test-server__kuma-3_msvc_80",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "alpnProtocols": [
                "kuma"
              ],
              "combinedValidationContext": {
                "defaultValidationContext": {
                  "matchTypedSubjectAltNames": [
                    {
                      "matcher": {
                        "exact": "spiffe://envoyconfig/test-server"
                      },
                      "sanType": "URI"
                    }
                  ]
                },
                "validationContextSdsSecretConfig": {
                  "name": "mesh_ca:secret:envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              },
              "tlsCertificateSdsSecretConfigs": [
                {
                  "name": "identity_cert:secret:envoyconfig",
                  "sdsConfig": {
                    "ads": {},
                    "resourceApiVersion": "V3"
                  }
                }
              ]
            },
            "sni": "a029781856823048e.test-server.80.envoyconfig.ms"
          }
        },
        "type": "EDS",
        "typedExtensionProtocolOptions": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "commonHttpProtocolOptions": {
              "idleTimeout": "3600s",
              "maxConnectionDuration": "0s",
              "maxStreamDuration": "0s"
            },
            "explicitHttpConfig": {
              "http2ProtocolOptions": {}
            }
          }
        }
      },
      "inbound:passthrough:ipv4": {
        "altStatName": "inbound_passthrough_ipv4",
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "inbound:passthrough:ipv4",
        "type": "ORIGINAL_DST",
        "upstreamBindConfig": {
          "sourceAddress": {
            "address": "IP_REDACTED",
            "portValue": 0
          }
        }
      },
      "inbound:passthrough:ipv6": {
        "altStatName": "inbound_passthrough_ipv6",
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "inbound:passthrough:ipv6",
        "type": "ORIGINAL_DST",
        "upstreamBindConfig": {
          "sourceAddress": {
            "address": "IP_REDACTED",
            "portValue": 0
          }
        }
      },
      "kuma:envoy:admin": {
        "altStatName": "kuma_envoy_admin",
        "connectTimeout": "5s",
        "loadAssignment": {
          "clusterName": "kuma:envoy:admin",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "IP_REDACTED",
                        "portValue": 9901
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "kuma:envoy:admin",
        "type": "STATIC"
      },
      "kuma:readiness": {
        "altStatName": "kuma_readiness",
        "connectTimeout": "5s",
        "loadAssignment": {
          "clusterName": "kuma:readiness",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "IP_REDACTED",
                        "portValue": 9902
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "kuma:readiness",
        "type": "STATIC"
      },
      "localhost:3000": {
        "altStatName": "localhost_3000",
        "connectTimeout": "5s",
        "loadAssignment": {
          "clusterName": "localhost:3000",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "IP_REDACTED",
                        "portValue": 3000
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "localhost:3000",
        "type": "STATIC",
        "upstreamBindConfig": {
          "sourceAddress": {
            "address": "IP_REDACTED",
            "portValue": 0
          }
        }
      },
      "outbound:passthrough:ipv4": {
        "altStatName": "outbound_passthrough_ipv4",
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "outbound:passthrough:ipv4",
        "type": "ORIGINAL_DST"
      },
      "outbound:passthrough:ipv6": {
        "altStatName": "outbound_passthrough_ipv6",
        "connectTimeout": "5s",
        "lbPolicy": "CLUSTER_PROVIDED",
        "name": "outbound:passthrough:ipv6",
        "type": "ORIGINAL_DST"
      }
    },
    "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment": {
      "envoyconfig_demo-client__kuma-3_msvc_3000": {
        "clusterName": "envoyconfig_demo-client__kuma-3_msvc_3000",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "IP_REDACTED",
                      "portValue": 3000
                    }
                  }
                },
                "loadBalancingWeight": 1,
                "metadata": {
                  "filterMetadata": {
                    "envoy.lb": {
                      "kuma.io/zone": "kuma-3",
                      "team": "client-owners"
                    },
                    "envoy.transport_socket_match": {
                      "kuma.io/zone": "kuma-3",
                      "team": "client-owners"
<<<<<<< HEAD
=======
                    },
                    "io.kuma.labels": {
                      "kuma.io/display-name": "demo-client",
                      "kuma.io/env": "universal",
                      "kuma.io/mesh": "envoyconfig",
                      "kuma.io/origin": "zone",
                      "kuma.io/proxy-type": "sidecar",
                      "kuma.io/zone": "kuma-3"
>>>>>>> 3bfbb2e00d (feat(labels): compute `kuma.io/display-name` for all resources (#17162))
                    }
                  }
                }
              }
            ],
            "locality": {
              "zone": "kuma-3"
            }
          }
        ]
      },
      "envoyconfig_test-server__kuma-3_msvc_80": {
        "clusterName": "envoyconfig_test-server__kuma-3_msvc_80",
        "endpoints": [
          {
            "lbEndpoints": [
              {
                "endpoint": {
                  "address": {
                    "socketAddress": {
                      "address": "IP_REDACTED",
                      "portValue": 80
                    }
                  }
                },
                "loadBalancingWeight": 1,
                "metadata": {
                  "filterMetadata": {
                    "envoy.lb": {
                      "instance": "1",
                      "kuma.io/protocol": "http",
                      "kuma.io/zone": "kuma-3",
                      "team": "server-owners",
                      "version": "v1"
                    },
                    "envoy.transport_socket_match": {
                      "instance": "1",
                      "kuma.io/protocol": "http",
                      "kuma.io/zone": "kuma-3",
                      "team": "server-owners",
                      "version": "v1"
<<<<<<< HEAD
=======
                    },
                    "io.kuma.labels": {
                      "kuma.io/display-name": "test-server",
                      "kuma.io/env": "universal",
                      "kuma.io/mesh": "envoyconfig",
                      "kuma.io/origin": "zone",
                      "kuma.io/proxy-type": "sidecar",
                      "kuma.io/zone": "kuma-3"
>>>>>>> 3bfbb2e00d (feat(labels): compute `kuma.io/display-name` for all resources (#17162))
                    }
                  }
                }
              }
            ],
            "locality": {
              "zone": "kuma-3"
            }
          }
        ]
      }
    },
    "type.googleapis.com/envoy.config.listener.v3.Listener": {
      "inbound:IP_REDACTED:3000": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 3000
          }
        },
        "bindToPort": false,
        "enableReusePort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.rbac",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC",
                  "rules": {
                    "policies": {
                      "MeshTrafficPermission": {
                        "permissions": [
                          {
                            "any": true
                          }
                        ],
                        "principals": [
                          {
                            "any": true
                          }
                        ]
                      }
                    }
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              },
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "localhost:3000",
                  "idleTimeout": "3600s",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ],
            "transportSocket": {
              "name": "envoy.transport_sockets.tls",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "commonTlsContext": {
                  "combinedValidationContext": {
                    "defaultValidationContext": {
                      "matchTypedSubjectAltNames": [
                        {
                          "matcher": {
                            "prefix": "spiffe://envoyconfig/"
                          },
                          "sanType": "URI"
                        }
                      ]
                    },
                    "validationContextSdsSecretConfig": {
                      "name": "mesh_ca:secret:envoyconfig",
                      "sdsConfig": {
                        "ads": {},
                        "resourceApiVersion": "V3"
                      }
                    }
                  },
                  "tlsCertificateSdsSecretConfigs": [
                    {
                      "name": "identity_cert:secret:envoyconfig",
                      "sdsConfig": {
                        "ads": {},
                        "resourceApiVersion": "V3"
                      }
                    }
                  ]
                },
                "requireClientCertificate": true
              }
            }
          }
        ],
        "metadata": {
          "filterMetadata": {
            "io.kuma.tags": {
              "kuma.io/service": "demo-client",
              "kuma.io/zone": "kuma-3",
              "team": "client-owners"
            }
          }
        },
        "name": "inbound:IP_REDACTED:3000",
        "trafficDirection": "INBOUND"
      },
      "inbound:passthrough:ipv4": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15006
          }
        },
        "enableReusePort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "inbound:passthrough:ipv4",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "inbound:passthrough:ipv4",
        "trafficDirection": "INBOUND",
        "useOriginalDst": true
      },
      "inbound:passthrough:ipv6": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15006
          }
        },
        "enableReusePort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "inbound:passthrough:ipv6",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "inbound:passthrough:ipv6",
        "trafficDirection": "INBOUND",
        "useOriginalDst": true
      },
      "kuma:envoy:admin": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 9901
          }
        },
        "enableReusePort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "httpFilters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "internalAddressConfig": {
                    "cidrRanges": [
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 32
                      }
                    ]
                  },
                  "routeConfig": {
                    "validateClusters": false,
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "kuma:envoy:admin",
                        "routes": [
                          {
                            "match": {
                              "prefix": "/ready"
                            },
                            "route": {
                              "cluster": "kuma:readiness",
                              "prefixRewrite": "/ready"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          },
          {
            "filterChainMatch": {
              "transportProtocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "httpFilters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "internalAddressConfig": {
                    "cidrRanges": [
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 32
                      }
                    ]
                  },
                  "routeConfig": {
                    "validateClusters": false,
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "kuma:envoy:admin",
                        "routes": [
                          {
                            "match": {
                              "prefix": "/ready"
                            },
                            "route": {
                              "cluster": "kuma:readiness",
                              "prefixRewrite": "/ready"
                            }
                          },
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "kuma:envoy:admin",
                              "prefixRewrite": "/"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ],
            "transportSocket": {
              "name": "envoy.transport_sockets.tls",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "commonTlsContext": {
                  "tlsCertificates": [
                    {
                      "certificateChain": {
                        "inlineBytes": ""
                      },
                      "privateKey": {
                        "inlineBytes": ""
                      }
                    }
                  ],
                  "validationContext": {
                    "matchTypedSubjectAltNames": [
                      {
                        "matcher": {
                          "exact": "kuma-cp"
                        },
                        "sanType": "DNS"
                      }
                    ],
                    "trustedCa": {
                      "inlineBytes": ""
                    }
                  }
                },
                "requireClientCertificate": true
              }
            }
          }
        ],
        "listenerFilters": [
          {
            "name": "envoy.filters.listener.tls_inspector",
            "typedConfig": {
              "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
            }
          }
        ],
        "name": "kuma:envoy:admin",
        "trafficDirection": "INBOUND"
      },
      "outbound:IP_REDACTED:3000": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 3000
          }
        },
        "bindToPort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "envoyconfig_demo-client__kuma-3_msvc_3000",
                  "idleTimeout": "3600s",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "metadata": {
          "filterMetadata": {
            "io.kuma.tags": {}
          }
        },
        "name": "outbound:IP_REDACTED:3000",
        "trafficDirection": "OUTBOUND"
      },
      "outbound:IP_REDACTED:80": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 80
          }
        },
        "bindToPort": false,
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "commonHttpProtocolOptions": {
                    "idleTimeout": "0s"
                  },
                  "httpFilters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "internalAddressConfig": {
                    "cidrRanges": [
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 8
                      },
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 16
                      },
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 12
                      },
                      {
                        "addressPrefix": "IP_REDACTED",
                        "prefixLen": 32
                      }
                    ]
                  },
                  "normalizePath": true,
                  "requestHeadersTimeout": "0s",
                  "routeConfig": {
                    "name": "kri_msvc_envoyconfig_kuma-3__test-server_80",
                    "validateClusters": false,
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "envoyconfig_test-server__kuma-3_msvc_80",
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "name": "9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=",
                            "route": {
                              "cluster": "envoyconfig_test-server__kuma-3_msvc_80",
                              "idleTimeout": "1800s",
                              "timeout": "15s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "metadata": {
          "filterMetadata": {
            "io.kuma.tags": {}
          }
        },
        "name": "outbound:IP_REDACTED:80",
        "trafficDirection": "OUTBOUND"
      },
      "outbound:passthrough:ipv4": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15001
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "outbound:passthrough:ipv4",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "outbound:passthrough:ipv4",
        "trafficDirection": "OUTBOUND",
        "useOriginalDst": true
      },
      "outbound:passthrough:ipv6": {
        "address": {
          "socketAddress": {
            "address": "IP_REDACTED",
            "portValue": 15001
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "cluster": "outbound:passthrough:ipv6",
                  "statPrefix": "STAT_PREFIX_REDACTED"
                }
              }
            ]
          }
        ],
        "name": "outbound:passthrough:ipv6",
        "trafficDirection": "OUTBOUND",
        "useOriginalDst": true
      }
    },
    "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret": {
      "identity_cert:secret:envoyconfig": {
        "name": "identity_cert:secret:envoyconfig",
        "tlsCertificate": {
          "certificateChain": {
            "inlineBytes": "Q0VSVA=="
          },
          "privateKey": {
            "inlineBytes": "S0VZ"
          }
        }
      },
      "mesh_ca:secret:envoyconfig": {
        "name": "mesh_ca:secret:envoyconfig",
        "validationContext": {
          "trustedCa": {
            "inlineBytes": "Q0E="
          }
        }
      }
    }
  }
}
